@@ -42,7 +42,7 @@ public final class CalculateFromListAction extends VariableAction {
         List<Object> elements = getArguments().getList("list",this);
         final String type = getArguments().getValue("calculation", "get-min", this);
 
-        if (elements != null && !elements.isEmpty() && elements.get(0) instanceof Number) {
+        if (elements != null && !elements.isEmpty() && elements.getFirst() instanceof Number) {
             List<Number> numbers = elements.stream()
                             .filter(o -> o instanceof Number)
                             .map(o -> (Number) o)
